--- a/v8_context_snapshot/BUILD.gn
+++ b/v8_context_snapshot/BUILD.gn
@@ -17,26 +17,16 @@ if (is_android) {
   import("//build/config/android/rules.gni")
 }
 
-if (is_android) {
-  android_assets("v8_context_snapshot_assets") {
-    deps = [
-      ":v8_context_snapshot",
-    ]
-    sources = [
-      "$root_out_dir/v8_context_snapshot.bin",
-    ]
-    disable_compression = true
-  }
-}
-
 group("v8_context_snapshot") {
   if (use_v8_context_snapshot) {
     public_deps = [
       ":generate_v8_context_snapshot",
     ]
-    data = [
-      "$root_out_dir/v8_context_snapshot.bin",
-    ]
+    if (!is_android) {
+      data = [
+        "$root_out_dir/v8_context_snapshot.bin",
+      ]
+    }
   }
 }
 
@@ -47,6 +37,25 @@ config("use_v8_context_snapshot") {
 }
 
 if (use_v8_context_snapshot) {
+  if (is_android && enable_java_templates) {
+    android_assets("v8_context_snapshot_assets") {
+      deps = [
+        ":v8_context_snapshot",
+      ]
+      sources = [
+        "$root_out_dir/natives_blob.bin",
+      ]
+      renaming_sources = [ "$root_out_dir/v8_context_snapshot.bin" ]
+      if (current_cpu == "arm" || current_cpu == "x86" ||
+          current_cpu == "mipsel") {
+        renaming_destinations = [ "v8_context_snapshot_32.bin" ]
+      } else {
+        renaming_destinations = [ "v8_context_snapshot_64.bin" ]
+      }
+      disable_compression = true
+    }
+  }
+
   action("generate_v8_context_snapshot") {
     script = "//build/gn_run_binary.py"
     output_file = "$root_out_dir/v8_context_snapshot.bin"
